Restructured page components to be called Investments with sub pages underneath.  Passing nav options into Navbar from Investments page and now maintaining subPage state in Investments page to control which sub page is show (e.g. net worth, asset allocation, …), when changing sub page also clear out state for anything sub page specific.  In Investment page file removed loading of data specific to sub pages and moved those to the relevant sub pages.  Created AssetAllocation page.  Generalize AccountView HoldingView so they can be used for multiple grouping types.  Added allocation % to Accounts table on net worth page, eliminates need for chart to show it.  Moved holdings filtering logic and types into the holdings component, and made an enum for holding filter types.  Added account type category and asset class filter options for transaction popup from holdings (including fix to Networth page where account type category selection wouldn’t limit transactions to the selected category.)  Moved sub page data loads to each sub page.  Added YTD Chg for total portfolio to chart title in Networth  Optimized expand all logic for tree view.  Added key to tree view recurring items.  Moved draw vertical line plugin for net worth line chart to the declaration of the component and eliminated the useEffect function and ref for the plugin (now it is only associated with the line chart, not all charts).  Removed unused changeInValue variable on account record in account group objects.  Made generic function to convert a string to array based on delimiter.

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   --app-background-color: #242424;
   --light-blue: #b0dfff;
   --blue: #35A2EB;
-  --green: #0DB800;
+  /* --green: #0DB800; */
+  --green: #008000;
   --light-green: #c2febe;
   --red: #B80000;
   --light-red: #fec1c1;
@@ -15,7 +16,7 @@
   --light-orange: #ffdca7;
   --light-grey: #F2F2F2;
   --light-grey2: #e0e0e0;
-  --medium-grey: #a6a6a6;
+  --medium-grey: #909090;
   --dark-grey: #4B4B4B;
   --light-text: white;
   --outer-padding: .75em;
@@ -145,7 +146,7 @@ a:hover {
   fill: var(--light-active-color) !important;
 }
 .button-el--visual:hover:not(.button-el--disabled) {
-  background-color: var(--dark-active-color);
+  background-color: var(--dark-active-color) !important;
   color: white !important;
   fill: white !important;
 }
@@ -202,6 +203,19 @@ ul {
   overflow: hidden;
 }
 
+.right-justify {
+  text-align: end;
+  justify-content: end;
+}
+.left-justify {
+  text-align: start;
+  justify-content: start;
+}
+.center-justify {
+  text-align: center;
+  justify-content: center;
+}
+
 /* Create content with two lines, with second line de-emphasized */
 .two-line {
   display: flex;
@@ -220,6 +234,9 @@ svg {
 .de-emphasize {
   color: var(--medium-grey);
   fill: var(--medium-grey);
+}
+.warning {
+  color: var(--red);
 }
 
 /* Classes used to modify color based on varying criteria.  'color-modifier' prefix is required so other elements can select on it. */
