Adjusted all filters to have same size font and color.  Adjusted filters to have all boxes be full width.  Updated sub pages to show ‘no data’ message once instead of relying on sub-components to show it multiple times.  Made apply button red when active.  Made Apply button optional and apply filters immediately when apply turned off.

--- a/src/components/DateSelector/DateSelector.css
+++ b/src/components/DateSelector/DateSelector.css
@@ -5,6 +5,9 @@
 
 .responsive-calendar-input {
     /* This has input text use default font size for page */
-    font-size: .85em !important; /* default to 10px */
+    font-size: 1em !important; /* default to 10px */
     width: 100%;
+    text-align: left;
+    color: var(--dark-grey);
+    border: 1px solid var(--medium-grey);
 }
