--- a/src/components/Filterbar/DateFilter/DateFilter.css
+++ b/src/components/Filterbar/DateFilter/DateFilter.css
@@ -3,16 +3,18 @@
   display: flex;
   flex-direction: column;
   gap: .5em;
-  --react-dropdown-select-handle-width: 11em; 
+  --react-dropdown-select-handle-width: 100%; 
   width: var(--react-dropdown-select-handle-width);
-  font-size: .9em;
   white-space: nowrap;
 }
 
 .datefilter--date {
+  width: 100%;
   display: flex;
   gap: .25em;
+  justify-content: space-between;
   align-items: center;
+  font-size: .9em;
 }
 
 @media (min-width: 800px) {
