Added performance sub page to investments and added it in nav.  Fxed convert date to string function to pad month and year to ensure they are two digits.  Centralized chart colors in config provider.  Centralized chart title and charts section title in common components.  Centralized common chart functions in utils, created generic line and bar chart components.  Added costBasis to IHolding.

--- a/src/components/Charts/ChartsTitle/ChartsTitle.css
+++ b/src/components/Charts/ChartsTitle/ChartsTitle.css
@@ -1,20 +1,20 @@
-.networth-chart--title {
+.charts--title {
     display: flex;
     gap: 1.5em;
     align-items: center;
 }
 
-.networth-chart--title-section {
+.charts--title-section {
     display: flex;
     gap: .5em;
     align-items: center;
 }
 
-.networth-chart--title-section--label {
+.charts--title-section--label {
     color: var(--medium-grey);
     font-size: 1.2em;
 }
 
-.networth-chart--title-section--value {
+.charts--title-section--value {
     font-size: 1.3em;
 }
