--- a/src/pages/Investments/AssetAllocation/AssetAllocationCharts/AssetAllocationCharts.css
+++ b/src/pages/Investments/AssetAllocation/AssetAllocationCharts/AssetAllocationCharts.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
+    align-items: center;
+}
+
+.asset-allocation--table {
+    width: 100%;
 }
 
 .asset-allocation--pie-charts {
