Fixed order of columns in Account View for Performance tab.  Fixed bug where holdings and accounts were nulled out when filters cleared even if no filters changed, resulting in account and holding view being stuck in placeholder view.  Fixed bug in activity range and filter bar values init constants, which set the date to today in initialization.  But if page is up more than one day it will be stale, changed to a get function that sets it to today when called.  Fixed bug in performance where it was passing the javascript date as end date, but it needed to be a string date.  Added nowrap class to formatted percentage and value components, they were wrapping because td element nowrap was not effective because there was a span below it.  Change YTD Return card on Performance tab to show YTD Return for year of As of Date, previously it only showed current year if it exists.  Created generic info icon and popup and added info buttons to many elements.

--- a/src/components/BasicTable/BasicTableColHeadings/BasicTableColHeadings.css
+++ b/src/components/BasicTable/BasicTableColHeadings/BasicTableColHeadings.css
@@ -1,3 +1,8 @@
+.basic-table--col-headings--heading {
+    display: flex;
+    gap: .5em;
+}
+
 .basic-table--col-headings--button {
     width: 100%;
     display: flex;
@@ -6,4 +11,14 @@
 
 .basic-table--col-headings--button span:nth-child(2) {
     margin-left: .5em;
+}
+
+.basic-table--col-headings--info-button {
+    align-self: center;
+    justify-self: center;
+    fill: var(--light-text);
+    .svg-container {
+        width: .85em;
+        height: .85em;
+    }
 }
