--- a/src/pages/Investments/Performance/PerformanceCharts/YtdCard/YtdCard.css
+++ b/src/pages/Investments/Performance/PerformanceCharts/YtdCard/YtdCard.css
@@ -8,6 +8,17 @@
     padding: 1em;
 }
 
+.ytd-card--title {
+    display: flex;
+    gap: .25em;
+    .svg-container {
+        align-self: center;
+        width: 1em;
+        height: 1em;
+        fill: var(--medium-grey);
+    }
+}
+
 .ytd-card--comparison {
     display: flex;
     flex-direction: column;
