--- a/src/pages/Investments/Performance/PerformanceCharts/YearlyChart/YearlyChart.css
+++ b/src/pages/Investments/Performance/PerformanceCharts/YearlyChart/YearlyChart.css
@@ -6,6 +6,17 @@
     gap: .25em;
 }
 
+.multi-year-chart--title {
+    display: flex;
+    gap: .5em;
+    .svg-container {
+        align-self: center;
+        width: .85em;
+        height: .85em;
+        fill: var(--medium-grey);
+    }
+}
+
 .yearly-chart--chart {
     width: 100%;
     display: flex;
