Change page structure to support multiple top level (header) options.  Put nav options in header.  Put page chosen in App component (passing set function to Header) and render header and page (based on page chosen) in App component.  Page only renders left bar (e.g. nav bar) and content area, header is now done at a higher level.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,10 +8,27 @@
 }
 
 .header--nav {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 2em;
+}
+
+.header--nav-options {
+  display: flex;
+  align-items: left;
+  justify-items: center;
+  gap: 1em;
+  div {
+    align-self: center;
+  }
+}
+
+.header--user {
   margin-left: auto;
 }
 
-.header--nav .svg-container {
+.header--user .svg-container {
   width: 1.5em;
   height: 1.5em;
 }
